tests/security/taintedInputFromMethodReturnTypeSimple/output.txt
ERROR: TaintedData - input.hack:12:22 - Data from a URL query string found its way to a SQL query